--- a/index.html
+++ b/index.html
@@ -153,12 +153,42 @@
 
 
 
+<!-- Numbers -->
+			<div id="numbers" class="section sm-padding">
+
+				<!-- Background Image -->
+				<div class="bg-img" style="background-image: url('./img/background2.jpg');">
+					<div class="overlay"></div>
+				</div>
+				<!-- /Background Image -->
+
+				<!-- Container -->
+				<div class="container">
+
+					<!-- Row -->
+					<div class="row" style="min-height:200px;">
+
+						
+
+
+					</div>
+					<!-- /Row -->
+
+				</div>
+				<!-- /Container -->
+
+			</div>
+			<!-- /Numbers -->
+
+
+
+
 
 
 
 
 			<!-- about us -->
-			<div id="service" class="section md-padding" style="background-color: #00305B;">
+			<div class="section md-padding" style="background-color: #00305B;">
 
 				<!-- Container -->
 				<div class="container" style="padding-top: 20px;padding-bottom: 20px;padding-left: 50px;padding-right: 50px;">
@@ -195,7 +225,7 @@
 
 
 			<!-- why optima us -->
-			<div id="service" class="section md-padding" >
+			<div  class="section md-padding" >
 
 				<!-- Container -->
 				<div class="container" style="padding-top: 20px;padding-bottom: 20px;padding-left: 50px;padding-right: 50px;">
@@ -335,7 +365,7 @@
 
 
 			<!-- Blog -->
-			<div id="blog" class="section md-padding bg-grey">
+			<div class="section md-padding bg-grey">
 
 				<!-- Container -->
 				<div class="container">
@@ -418,7 +448,32 @@
 			</div>
 			<!-- /Blog -->
 
-			
+			<!-- Numbers -->
+			<div id="numbers" class="section sm-padding">
+
+				<!-- Background Image -->
+				<div class="bg-img" style="background-image: url('./img/background2.jpg');">
+					<div class="overlay"></div>
+				</div>
+				<!-- /Background Image -->
+
+				<!-- Container -->
+				<div class="container">
+
+					<!-- Row -->
+					<div class="row" style="min-height:200px;">
+
+						
+
+
+					</div>
+					<!-- /Row -->
+
+				</div>
+				<!-- /Container -->
+
+			</div>
+			<!-- /Numbers -->
 
 
 			<!-- Footer -->
