--- a/index.html
+++ b/index.html
@@ -68,15 +68,15 @@
 						<li><a href="about.html">About</a></li>
 						<li class="has-dropdown"><a href="#blog">Services</a>
 							<ul class="dropdown">
-								<li><a href="blog-single.html">Engineering Services</a></li>
-								<li><a href="blog-single.html">Management Services</a></li>
+								<li><a href="eng_services.html">Engineering Services</a></li>
+								<li><a href="man_service.html">Management Services</a></li>
 							</ul>
 						</li>
 						
-						<li><a href="#pricing">News</a></li>
-						<li><a href="#team">Career</a></li>
+						<li><a href="news.html">News</a></li>
+						<li><a href="career.html">Career</a></li>
 						
-						<li><a href="#contact">Contact</a></li>
+						<li><a href="contact.html">Contact</a></li>
 					</ul>
 					<!-- /Main navigation -->
 
