--- a/about copy.html
+++ b/about copy.html
@@ -63,19 +63,20 @@
 
 				<!--  Main navigation  -->
 				<ul class="main-nav nav navbar-nav navbar-right">
-					<li><a href="index.html">Home</a></li>
+						<li><a href="index.html">Home</a></li>
 						<li><a href="about.html">About</a></li>
-					<li><a href="index.html#portfolio">Portfolio</a></li>
-					<li><a href="index.html#service">Services</a></li>
-					<li><a href="index.html#pricing">Prices</a></li>
-					<li><a href="index.html#team">Team</a></li>
-					<li class="has-dropdown"><a>Blog</a>
-						<ul class="dropdown">
-							<li><a href="#">blog post</a></li>
-						</ul>
-					</li>
-					<li><a href="index.html#contact">Contact</a></li>
-				</ul>
+						<li class="has-dropdown"><a href="#blog">Services</a>
+							<ul class="dropdown">
+								<li><a href="eng_services.html">Engineering Services</a></li>
+								<li><a href="man_service.html">Management Services</a></li>
+							</ul>
+						</li>
+						
+						<li><a href="news.html">News</a></li>
+						<li><a href="career.html">Career</a></li>
+						
+						<li><a href="contact.html">Contact</a></li>
+					</ul>
 				<!-- /Main navigation -->
 
 			</div>
