--- a/career.html
+++ b/career.html
@@ -102,8 +102,9 @@
 
 <p>Currently we are recruiting for the following positions for upcoming projects in Seattle, WA:
 
+
 <ul>
-<li>Civil Engineer/ Architect</li>
+<li id="#ParentDiv">Civil Engineer/ Architect</li>
 <li>Resident Engineer</li>
 <li>Construction Inspector</li>
 <li>Document Control/Contract Administrative Assistant</li>
@@ -304,21 +305,12 @@ E-mail: a.ikbal@optimapm.com</p>
 <style type="text/css">
 
 
-ul {
-  list-style: none;
-  margin-left: 0;
-  padding-left: 0;
-}
+/*
 
-li {
-  padding-left: 1em;
-  text-indent: -1em;
-}
-
-li:before {
+#ParentDiv::before {
   content: "+";
   padding-right: 5px;
-}
+}*/
 </style>
 	</body>
 
