home page correction

--- a/index.html
+++ b/index.html
@@ -335,11 +335,18 @@
 						<div class="col-sm-1 col-xs-1"></div>
 						<!-- number -->
 						<div class="col-sm-10 col-xs-10">
-							<h1 style=" text-align: center;  color: white; padding-top: 30px; padding-bottom: 30px;">"120 YEARS OF COMBINED PROFESSIONAL EXPERIENCE"</h1>
+
+							<div class="row" style="min-height:200px;">
+
+						
+
+
+					</div>
+							<!-- <h1 style=" text-align: center;  color: white; padding-top: 30px; padding-bottom: 30px;">"120 YEARS OF COMBINED PROFESSIONAL EXPERIENCE"</h1>
 
 
 							<p style="text-align: center; color: white; font-size: large; padding-bottom: 30px;">
-							A specialize project management consultancy for civil infrastructure and information technology projects. Our paramount goals are achieving optimum results and giving the best client service. Optima has highly experience, credentialed project managers and registered engineers based in Seattle, Washington to serve clients in the Pacific Northwest and California.</p>
+							A specialize project management consultancy for civil infrastructure and information technology projects. Our paramount goals are achieving optimum results and giving the best client service. Optima has highly experience, credentialed project managers and registered engineers based in Seattle, Washington to serve clients in the Pacific Northwest and California.</p> -->
 
 
 						</div>
