done so far eng serv

--- a/eng_services.html
+++ b/eng_services.html
@@ -133,7 +133,7 @@
 
 				<div class="col-md-10">
 
-					<div class="section-header" style="padding-top: 50px;">
+					<div class="section-header text-center" style="padding-top: 50px;">
 						<h3 class="title">Construction Management</h3>
 					</div>
 
@@ -162,7 +162,7 @@
 
 							<div class="team" data-toggle="modal" data-target="#exampleModal">
 								<div class="team-img">
-									<img class="img-responsive" src="./img/background2.jpg" alt="">
+									<img class="img-responsive" src="./img/constructionmanagement.png" alt="">
 
 								</div>
 
@@ -198,7 +198,7 @@
 
 				<div class="col-md-10">
 
-					<div class="section-header" style="padding-top: 50px;">
+					<div class="section-header text-center" style="padding-top: 50px;">
 						<h3 class="title">Design Engineering</h3>
 					</div>
 
@@ -208,7 +208,7 @@
 
 							<div class="team" data-toggle="modal" data-target="#exampleModal">
 								<div class="team-img">
-									<img class="img-responsive" src="./img/background2.jpg" alt="">
+									<img class="img-responsive" src="./img/design.jpg" alt="">
 
 								</div>
 
@@ -260,8 +260,8 @@
 
 				<div class="col-md-10">
 
-					<div class="section-header" style="padding-top: 50px;">
-						<h3 class="title">ENVIRONMENTAL PLANNING</h3>
+					<div class="section-header text-center" style="padding-top: 50px;">
+						<h3 class="title">Environmental Planning</h3>
 					</div>
 
 					<div class="row abc" >
@@ -277,7 +277,7 @@
 
 							<div class="team" data-toggle="modal" data-target="#exampleModal">
 								<div class="team-img">
-									<img class="img-responsive" src="./img/background2.jpg" alt="">
+									<img class="img-responsive" src="./img/3.jpg" alt="">
 
 								</div>
 
@@ -313,7 +313,7 @@
 
 				<div class="col-md-10">
 
-					<div class="section-header" style="padding-top: 50px;">
+					<div class="section-header text-center" style="padding-top: 50px;">
 						<h3 class="title">Project Control Engineering</h3>
 					</div>
 
@@ -323,7 +323,7 @@
 
 							<div class="team" data-toggle="modal" data-target="#exampleModal">
 								<div class="team-img">
-									<img class="img-responsive" src="./img/background2.jpg" alt="">
+									<img class="img-responsive" src="./img/projectcontrols_hd.jpg" alt="">
 
 								</div>
 
@@ -370,8 +370,8 @@ Our consultants strive to keep abreast of advances in engineering and management
 
 				<div class="col-md-10">
 
-					<div class="section-header" style="padding-top: 50px;">
-						<h3 class="title">PROJECT MANAGEMENT</h3>
+					<div class="section-header text-center" style="padding-top: 50px;">
+						<h3 class="title">Project Management</h3>
 					</div>
 
 					<div class="row abc" >
@@ -398,7 +398,7 @@ Our consultants strive to keep abreast of advances in engineering and management
 
 							<div class="team" data-toggle="modal" data-target="#exampleModal">
 								<div class="team-img">
-									<img class="img-responsive" src="./img/background2.jpg" alt="">
+									<img class="img-responsive" src="./img/disruption_mainart2.jpg" alt="">
 
 								</div>
 
@@ -422,11 +422,13 @@ Our consultants strive to keep abreast of advances in engineering and management
 
 		
 		<!-- /Header -->
-
+<div class="row">
+<br><br><br>
+</div>
 		
 
 		<!-- Footer -->
-		<footer id="footer" class="sm-padding bg-dark">
+		<footer id="footer" class="sm-padding bg-dark" >
 
 			<!-- Container -->
 			<div class="container">
