management with out images

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 						<li class="has-dropdown"><a href="#blog">Services</a>
 							<ul class="dropdown">
 								<li><a href="eng_services.html">Engineering Services</a></li>
-								<li><a href="man_service.html">Management Services</a></li>
+								<li><a href="man_service.html">Management Consultancy</a></li>
 							</ul>
 						</li>
 						
